--- a/mod1_leccion07.ipynb
+++ b/mod1_leccion07.ipynb
@@ -107,6 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creamos clase empleados\n",
     "class Empleados:\n",
     "\n",
     "    def __init__(self, nombre, apellidos, edad, posicion, año, vacaciones, herramientas):\n",
@@ -119,10 +120,10 @@
     "        self.herramientas = herramientas\n",
     "        herramientas = []\n",
     "\n",
-    "    def descripcion(self):\n",
+    "    def descripcion(self): # 1.1 Método descripción\n",
     "        print(f'Descipción empleado: {self.nombre}, {self.posicion}, {self.año}, {self.vacaciones}')\n",
     "    \n",
-    "    def camiando_posicion(self):\n",
+    "    def camiando_posicion(self): # 1.2 Método cambiando_posicion\n",
     "        if 'python' in self.herramientas:\n",
     "            print('Eres una máquina!!')\n",
     "            \n",
@@ -131,7 +132,8 @@
     "                if h == 'excel':\n",
     "                    print('Aprende Python, vago!')\n",
     "    \n",
-    "    def calcular_antiguedad(self):\n",
+    "    def calcular_antiguedad(self): #1.3 calcular antiguedad\n",
+    "        \n",
     "        \n",
     "\n"
    ]
@@ -175,6 +177,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "# Define tus fechas en formato string\n",
+    "fecha1 = \"2025-01-01\"\n",
+    "fecha2 = \"2025-02-12\"\n",
+    "\n",
+    "# Convierte las fechas de string a objetos datetime\n",
+    "fecha1_obj = datetime.strptime(fecha1, \"%Y-%m-%d\")\n",
+    "fecha2_obj = datetime.strptime(fecha2, \"%Y-%m-%d\")\n",
+    "\n",
+    "# Calcula la diferencia en años y meses\n",
+    "anios = fecha2_obj.year - fecha1_obj.year\n",
+    "meses = fecha2_obj.month - fecha1_obj.month\n",
+    "\n",
+    "# Si el mes de la fecha2 es menor que el de fecha1, resta un año y ajusta los meses\n",
+    "if meses < 0:\n",
+    "    anios -= 1\n",
+    "    meses += 12\n",
+    "\n",
+    "print(f\"La diferencia es de {anios} años y {meses} meses.\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -203,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
